Issue 3215 - Fix overflowing email addresses in user info popup.
For long e-mail addresses, the info popup that's shown when hovering
a username would have the address overflow outside the box's
boundaries. This was pretty ugly.

We've restricted the width of the e-mail address, and now wrap them
instead.

Reviewed at https://reviews.reviewboard.org/r/5422/.

--- a/reviewboard/static/rb/css/common.less
+++ b/reviewboard/static/rb/css/common.less
@@ -979,7 +979,7 @@ body.admin #navbar {
   background: #F9F9F9;
   border: 1px black solid;
   display: block;
-  height: 12em;
+  min-height: 12em;
   padding: 1em;
   position: absolute;
   min-width: 30em;
@@ -1002,6 +1002,8 @@ body.admin #navbar {
   .infobox-text {
     color: black;
     float: left;
+    max-width: 200px;
+    word-wrap: break-word;
   }
 
   a {
